--- a/drivers/android/Kconfig
+++ b/drivers/android/Kconfig
@@ -109,5 +109,15 @@ config ANDROID_STRUCT_PADDING
 	  NOT be supported by the Google Android kernel team.
 	  If even slightly unsure, say Y.
 
+config ANDROID_BINDER_LOGS
+	bool "Android Binder Logging"
+	depends on ANDROID_BINDERFS
+	help
+	  Enables binder_logs directory in binderfs and debug_mask for dmesg
+	  logging. Needed for DEBUG_FS.
+	  This option impacts performance.
+
+	  Say N on production builds.
+
 endif # if ANDROID
 endmenu
