KernelSU: update to backslashxx/KernelSU 12071+sus155
Co-authored-by: backslashxx <118538522+backslashxx@users.noreply.github.com>
Signed-off-by: alternoegraha <noegrahachan@gmail.com>

--- a/KernelSU/kernel/Kconfig
+++ b/KernelSU/kernel/Kconfig
@@ -2,7 +2,8 @@ menu "KernelSU"
 
 config KSU
 	bool "KernelSU function support"
-	depends on OVERLAY_FS
+	select OVERLAY_FS
+	select EXT4_FS
 	default y
 	help
 	  Enable kernel-level root privileges on Android System.
@@ -21,6 +22,14 @@ config KSU_ALLOWLIST_WORKAROUND
         help
           Enable session keyring init workaround for problematic devices.
           Useful for situations where the SU allowlist is not kept after a reboot.
+
+config KSU_LSM_SECURITY_HOOKS
+	bool "use lsm security hooks"
+        depends on KSU
+        default y
+	help
+	  Disabling this is mostly only useful for kernel 4.1 and older.
+	  Make sure to implement manual hooks on security/security.c.
 
 menu "KernelSU - SUSFS"
 config KSU_SUSFS
